#297: CustomShellSettingsModal: Fix 'Quote shell arguments' description text overlapping with the toggle element.

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,13 @@ div.SC-setting-group div.setting-item.SC-full-description div.setting-item-contr
     width: 0; /* Make room for description. */
 }
 
+div.SC-setting-group div.setting-item.SC-wide-description div.setting-item-info {
+    width: max-content; /* Grow description as wide as possible, but leave some space for setting control elements. */
+}
+div.SC-setting-group div.setting-item.SC-wide-description div.setting-item-control {
+    width: min-content; /* Make room for description. */
+}
+
 div.SC-setting-group div.setting-item input[type=text],
 div.SC-setting-group div.setting-item input[type=search],
 div.SC-setting-group div.setting-item textarea,
